--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "konva": "^9.3.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
